--- a/package.json
+++ b/package.json
@@ -52,5 +52,10 @@
     "stream",
     "typescript",
     "esmodules"
-  ]
+  ],
+  "dependencies": {
+    "@hazae41/future": "^1.0.3",
+    "@hazae41/option": "^1.0.27",
+    "@hazae41/plume": "^2.3.0"
+  }
 }
