--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
   ],
   "dependencies": {
     "@hazae41/future": "^1.0.3",
-    "@hazae41/option": "^1.0.27",
-    "@hazae41/plume": "^2.4.0"
+    "@hazae41/option": "^1.0.27"
   }
 }
